--- a/application.json
+++ b/application.json
@@ -8,6 +8,19 @@
   "viewMode": false,
   "appIsExample": false,
   "unreadCommentThreads": 0,
+  "unpublishedApplicationDetail": {
+    "navigationSetting": {
+      "showNavbar": false,
+      "orientation": "top",
+      "navStyle": "inline",
+      "position": "static",
+      "itemStyle": "text",
+      "colorStyle": "theme",
+      "logoAssetId": "",
+      "logoConfiguration": "logoOnly",
+      "showSignIn": false
+    }
+  },
   "color": "#FFEBFB",
   "unpublishedCustomJSLibs": [],
   "publishedCustomJSLibs": [],
