--- a/application.json
+++ b/application.json
@@ -25,6 +25,9 @@
   "unpublishedAppLayout": {
     "type": "MOBILE"
   },
+  "publishedAppLayout": {
+    "type": "MOBILE"
+  },
   "unpublishedCustomJSLibs": [],
   "publishedCustomJSLibs": [],
   "evaluationVersion": 2,
