1. containerوارد کردن فیلد 2.textوارد کردن فیلد 3.inputوارد کردن فیلد 4. مقدار گذاری برای هر کدام از اینان

--- a/application.json
+++ b/application.json
@@ -3,6 +3,10 @@
     {
       "id": "Submit",
       "isDefault": true
+    },
+    {
+      "id": "Login",
+      "isDefault": false
     }
   ],
   "viewMode": false,
