✨: اضافه شدن تاریخ به جای روز، اضافه شدن داشبورد تیم مربیان و احراز هویت 🐛: درست کردن مشکل نبود فیلد در آرایه

--- a/application.json
+++ b/application.json
@@ -33,6 +33,26 @@
     {
       "id": "Login",
       "isDefault": true
+    },
+    {
+      "id": "Access to trainers",
+      "isDefault": false
+    },
+    {
+      "id": "Officials",
+      "isDefault": false
+    },
+    {
+      "id": "Menu Student",
+      "isDefault": false
+    },
+    {
+      "id": "KomakMorabbi",
+      "isDefault": false
+    },
+    {
+      "id": "Morabbi",
+      "isDefault": false
     }
   ],
   "unpublishedAppLayout": {
