--- a/application.json
+++ b/application.json
@@ -35,7 +35,7 @@
       "isDefault": true
     },
     {
-      "id": "Access to trainers",
+      "id": "Morabbi",
       "isDefault": false
     },
     {
@@ -51,7 +51,7 @@
       "isDefault": false
     },
     {
-      "id": "Morabbi",
+      "id": "Morabbii",
       "isDefault": false
     }
   ],
