✨ایجاد بخش منو برای ورود دانش آموزان

--- a/application.json
+++ b/application.json
@@ -49,6 +49,10 @@
     {
       "id": "KomakMorabbi",
       "isDefault": false
+    },
+    {
+      "id": "messageMorabi",
+      "isDefault": false
     }
   ],
   "unpublishedAppLayout": {
