ایجاد صفحه فرهنگی✨

--- a/application.json
+++ b/application.json
@@ -53,6 +53,10 @@
     {
       "id": "messageMorabi",
       "isDefault": false
+    },
+    {
+      "id": "farhangi",
+      "isDefault": false
     }
   ],
   "unpublishedAppLayout": {
