✨افزودن صفحه نتایج برای بچه ها ✨آوردن عکس برای  صفحه منو و سابمیت

--- a/application.json
+++ b/application.json
@@ -57,6 +57,10 @@
     {
       "id": "farhangi",
       "isDefault": false
+    },
+    {
+      "id": "Results",
+      "isDefault": false
     }
   ],
   "unpublishedAppLayout": {
