به روز رسانی عکس صفحه submit

--- a/application.json
+++ b/application.json
@@ -61,6 +61,10 @@
     {
       "id": "Results",
       "isDefault": false
+    },
+    {
+      "id": "record",
+      "isDefault": false
     }
   ],
   "unpublishedAppLayout": {
